Fixes code structure and css styling for import table on mobile

--- a/src/client/styles/settings.scss
+++ b/src/client/styles/settings.scss
@@ -346,53 +346,58 @@
         }
       }
     }
-    .results{
+    .results {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-top: 40px;
-        .display-results{
-          margin-top: 5px;
-          table-layout: fixed;
-          border-collapse: collapse;
-          @media (max-width: 425px) {
-            display: none;
+        .display-results {
+          border-collapse: separate;
+          margin: 1em 0;
+          border-radius: .4em;
+          min-width: 210px;
+          @media (min-width: 480px) {
+            border-collapse: collapse;
+
           }
-          tr:hover{
-            background-color: #f5f5f5;
-            td{
-              overflow: hidden;
-              text-overflow: ellipsis;
+          @media (min-width: 375px) {
+            min-width: 100%;
+          }
+          tr {
+            border-top: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
+            &:hover {
+              background-color: #f5f5f5;
             }
           }
-          .title-heading{
-            width: 50%;
+          th {
+            display: none;
           }
-          .success{
-            background-color: #99ff99;
+          td {
+            display: block; 
+            &:first-child {
+              padding-top: .5em;
+            }
+            &:last-child {
+              padding-bottom: 1.5em;
+            }
+            &:before {
+              content: attr(data-th)": ";
+              font-weight: bold;
+              width: 4em;
+              display: inline-block;
+              @media (min-width: 480px) {
+                display: none;
+              }
+            }
           }
-          .failed{
-            background-color: #ffb3b3;
-          }
-          .exists{
-            background-color: #ffffb3;
+          th, td {
+          text-align: left;
+          @media (min-width: 480px) {
+            display: table-cell;
+            padding: .25em .5em;
           }
         }
-        .display-results-mobile{
-          display: none;
-          margin-top: 5px;
-          table-layout: fixed;
-          border-collapse: collapse;
-          @media (max-width: 425px) {
-            display: block;
-          }
-          th{
-            width: 25%;
-          }
-          td{
-            overflow: hidden;
-            text-overflow: ellipsis;
-          }
           .title-heading{
             width: 50%;
           }
